# rc_controllers

gimbal_controller/: CMakeLists.txt  gimbal_controller_plugins.xml
gimbal_controller/include/gimbal_controller/: gimbal_base.h
gimbal_controller/src/: gimbal_base.cpp
gimbal_controller/test/: gimbal_config_template.yaml  load_controllers.launch
mimic_joint_controller/src/: .mimic_joint_controller.cpp.swp
robot_state_controller/: CMakeLists.txt
robot_state_controller/include/robot_state_controller/: robot_state_controller.h
robot_state_controller/src/: robot_state_controller.cpp
rotation_controller/: CMakeLists.txt  package.xml  rotation_controller_plugins.xml
rotation_controller/include/rotation_controller/: rotation_controller.h
rotation_controller/src/: rotation_controller.cpp
